--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="">
-    <meta property="og:url" content="http://example.org/">
+    <meta property="og:url" content="http://hechen0.com/">
 
-    <title>何晨的博客</title>
-    <meta property="og:title" content="何晨的博客">
+    <title>何晨的网志</title>
+    <meta property="og:title" content="何晨的网志">
     <meta property="og:type" content="website">
     <meta name="description" content="">
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Code+Pro|Arvo:400,700">
     <link rel="stylesheet" href="/css/highlight.css">
     <link rel="stylesheet" href="/css/journal.css">
-    <link href="/index.xml" rel="alternate" type="application/rss+xml" title="何晨的博客">
+    <link href="/index.xml" rel="alternate" type="application/rss+xml" title="何晨的网志">
 
   </head>
 
@@ -26,7 +26,7 @@
     <div class="container">
 
       <header class="site-header">
-        <h1>何晨的博客</h1>
+        <h1>何晨的网志</h1>
         <p></p>
       </header>
 
@@ -40,7 +40,7 @@
 
       <footer class="site-footer">
         <span itemscope itemtype="http://schema.org/Person">
-          <link itemprop="url" href="http://example.org/">
+          <link itemprop="url" href="http://hechen0.com/">
           <span itemprop="name"></span>
 
           <br>
