--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
     <meta name="author" content="">
     <meta property="og:url" content="http://hechen0.com/">
 
-    <title>何晨的网志</title>
-    <meta property="og:title" content="何晨的网志">
+    <title>何晨的随笔</title>
+    <meta property="og:title" content="何晨的随笔">
     <meta property="og:type" content="website">
     <meta name="description" content="">
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Code+Pro|Arvo:400,700">
     <link rel="stylesheet" href="/css/highlight.css">
     <link rel="stylesheet" href="/css/journal.css">
-    <link href="/index.xml" rel="alternate" type="application/rss+xml" title="何晨的网志">
+    <link href="/index.xml" rel="alternate" type="application/rss+xml" title="何晨的随笔">
 
   </head>
 
@@ -26,7 +26,7 @@
     <div class="container">
 
       <header class="site-header">
-        <h1>何晨的网志</h1>
+        <h1>何晨的随笔</h1>
         <p></p>
       </header>
 
